--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.3",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "eslint": "^8",
