--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-google-forms-hooks": "^1.2.4",
     "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.3",
-    "react-toastify": "^10.0.6",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
