--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.3",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
