--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-email/components": "0.0.19",
+    "@react-email/components": "^0.0.19",
     "@react-email/html": "0.0.8",
+    "@react-email/render": "^1.0.5",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.0",
