--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "react-select": "^5.8.3",
     "recharts": "^2.15.1",
     "uuid": "^9.0.1"
