--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-email/render": "^1.0.5",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.9",
     "cloudinary": "^2.5.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
@@ -30,6 +31,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
